# poem

./: .gitignore  Cargo.toml
migrations/2022-08-01-170006_test/: down.sql  up.sql
migrations/2022-08-05-182032_create_poem/: down.sql  up.sql
src/: db_error.rs  main.rs  models.rs  poem.rs  schema.rs  subject.rs
src/api/: mod.rs  poem.rs
src/db/: mod.rs  models.rs  poem.rs
